# retrrrryyr

.github/workflows/: main.yml
AETHERFLOWS-main/: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build.yml
AETHERFLOWS-main/Source/: Main.cpp
AETHERFLOWS-main/Source/Audio/: AetherEffects.cpp  AetherEffects.h  AetherProcessor.cpp  AetherProcessor.h  AetherSynth.cpp  AetherSynth.h  AudioClipSource.cpp  AudioClipSource.h  AudioEngine.cpp  AudioEngine.h  AudioExporter.cpp  AudioExporter.h  AudioRecorder.cpp  AudioRecorder.h
AETHERFLOWS-main/Source/Core/: Clip.cpp  Clip.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h
AETHERFLOWS-main/Source/Data/: ProjectManager.cpp  ProjectManager.h
AETHERFLOWS-main/Source/UI/: AetherLookAndFeel.cpp  AetherLookAndFeel.h  ClipComponent.cpp  ClipComponent.h  MainComponent.cpp  MainComponent.h  MixerPanel.cpp  MixerPanel.h  PianoRollComponent.cpp  PianoRollComponent.h  TimelineComponent.cpp  TimelineComponent.h  TopBar.cpp  TopBar.h
